[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocotbext-mipi-csi2"
dynamic = ["version"]
description = "MIPI CSI-2 simulation framework for cocotb"
readme = "README.md"
license = "MIT"
authors = [
  { name = "David stonelyd", email = "stonelyd@yahoo.com" }
]
keywords = ["mipi", "csi-2", "dphy", "cphy", "camera", "cocotb", "simulation"]
requires-python = ">=3.6"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: cocotb",
  "Intended Audience :: Developers",

  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Topic :: System :: Hardware"
]
dependencies = [
  "cocotb >= 1.9.0",
  "cocotb-bus >= 0.2.1",
  "numpy >= 1.16.0"
]

[project.optional-dependencies]
test = [
  "pytest >= 6.0",
  "pytest-cov",
  "cocotb-test >= 0.2.4"
]
dev = [
  "pytest >= 6.0",
  "pytest-cov",
  "cocotb-test >= 0.2.4",
  "sphinx",
  "sphinx-rtd-theme",
  "black",
  "flake8",
  "mypy"
]

[project.urls]
"Bug Tracker" = "https://github.com/stonelyd/cocotbext-mipi-csi2/issues"
"Source Code" = "https://github.com/stonelyd/cocotbext-mipi-csi2"
"Documentation" = "https://cocotbext-mipi-csi2.readthedocs.io/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "cocotbext.mipi_csi2.about.__version__"}

[tool.setuptools.package-data]
"*" = ["*.md", "*.rst", "*.txt"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cocotbext.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode importlib"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
norecursedirs = ["tests/pending_*", "untested_wip"]

[tool.coverage.run]
source = ["cocotbext.mipi_csi2"]
omit = [
  "*/tests/*",
  "*/test_*",
  "setup.py",
  ".tox/*",
  "tests/pending_*/*",
  "untested_wip/*"
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:"
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  "*.egg-info"
]

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true