[metadata]
name = cocotbext-csi2
version = attr: cocotbext.csi2.about.__version__
description = MIPI CSI-2 simulation framework for cocotb
keywords = mipi, csi-2, dphy, cphy, camera, cocotb, simulation
author = CSI-2 Extension Contributors
author_email = contributors@cocotbext-csi2.org
license = MIT
url = https://github.com/user/cocotbext-csi2
project_urls =
    Bug Tracker = https://github.com/user/cocotbext-csi2/issues
    Source Code = https://github.com/user/cocotbext-csi2
    Documentation = https://cocotbext-csi2.readthedocs.io/
download_url = https://github.com/user/cocotbext-csi2/tarball/main
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Framework :: cocotb
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: System :: Hardware

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    cocotb >= 1.6.0
    cocotb-bus >= 0.2.1
    numpy >= 1.16.0

[options.extras_require]
test =
    pytest >= 6.0
    pytest-cov
    cocotb-test >= 0.2.4
dev =
    pytest >= 6.0
    pytest-cov
    cocotb-test >= 0.2.4
    sphinx
    sphinx-rtd-theme
    black
    flake8
    mypy

[options.packages.find]
include = cocotbext.*

[options.package_data]
* = *.md, *.rst, *.txt

# pytest configuration
[tool:pytest]
testpaths = tests
addopts = 
    --import-mode importlib
    --cov=cocotbext.csi2
    --cov-report=html
    --cov-report=term-missing
python_files = test_*.py
python_classes = Test*
python_functions = test_*

# coverage configuration
[coverage:run]
source = cocotbext.csi2
omit = 
    */tests/*
    */test_*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

# flake8 configuration
[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

# mypy configuration
[mypy]
python_version = 3.6
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
show_error_codes = True

[mypy-cocotb.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True
